# anyloop

./: .editorconfig  .gitignore  README.md  meson.build  todo.md
.github/workflows/: main.yml
config/: openao_conf.json
contrib/: anyloop.jl  com_test.json  conf_example.json  conf_example1.json  conf_example2.json  conf_fifo.json  heatmap_file.jl  menable5_test.json  pinv.jl  plot_square_of_doubles.jl  plugin_example.c  poke.json  watch_fifo.jl  watch_udp.jl  watch_udp_com.jl  watch_udp_square.jl
contrib/plug/: menable5.c  menable5.h  plugin_example.c
devices/: center_of_mass.c  center_of_mass.h  clamp.c  clamp.h  delay.c  delay.h  device.c  device.h  file_sink.c  file_sink.h  logger.c  logger.h  matmul.c  matmul.h  pid.c  pid.h  poke.c  poke.h  remove_piston.c  remove_piston.h  stop_after_count.c  stop_after_count.h  test_source.c  test_source.h  udp_sink.c  udp_sink.h  vonkarman_stream.c  vonkarman_stream.h
doc/: command.md  conf.md  devices.md  filetype.md
doc/devices/: center_of_mass.md  clamp.md  delay.md  file_sink.md  logger.md  matmul.md  pid.md  poke.md  remove_piston.md  stop_after_count.md  test_source.md  udp_sink.md  vonkarman_stream.md
include/: logging.h
libaylp/: anyloop.c  anyloop.h  block.c  block.h  config.c  config.h  device.c  device.h  logging.c  logging.h  pretty.c  pretty.h  profile.c  profile.h  thread_pool.c  thread_pool.h  xalloc.c  xalloc.h
src/: anyloop.c  anyloop.h  block.h  config.c  config.h  device.c  device.h  logging.c  logging.h  openao.c  openao.h
src/devices/: delay.c  delay.h  file_sink.c  file_sink.h  logger.c  logger.h  udp_sink.c  udp_sink.h  vonkarman_screen.c  vonkarman_screen.h  vonkarman_stream.c  vonkarman_stream.h
test/: com.sh  matmul.sh  test.sh
